CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)


IF(LUAROCKS_PREFIX)
  MESSAGE(STATUS "Installing Torch-mklnn through Luarocks")
  STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
  MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(MKLML REQUIRED)

FIND_PACKAGE(MKLTorch REQUIRED)

INCLUDE_DIRECTORIES("${MKLTorch_INSTALL_INCLUDE}")
LINK_DIRECTORIES("${MKLTorch_INSTALL_LIB}")

FILE(GLOB luasrc ./*.lua)
set(src  init.c)
MESSAGE(STATUS "src =" "${src}")
ADD_TORCH_PACKAGE(mklnn "${src}" "${luasrc}" "Intel MKLNN")

TARGET_LINK_LIBRARIES(mklnn ${MKLML_LIBRARIES} ${MKLTorch_LIBRARIES})
